syntax = "proto3";

package leo.internal.statusx;

option go_package = "github.com/go-leo/leo/v3/internal/statusx;statusx";

import "google/protobuf/any.proto";
import "google/protobuf/wrappers.proto";
import "google/rpc/status.proto";
import "google/rpc/error_details.proto";
import "google/rpc/http.proto";

// Error is the error.
message Error {

  // causes is the causes.
  Cause cause = 1;

  // detail is the details.
  Detail detail = 2;

  // http_status is the http status.
  google.rpc.HttpResponse http_status = 3;

  // grpc_status is the grpc status.
  google.rpc.Status grpc_status = 4;

}

message Detail {
  // error_info is the error info.
  google.rpc.ErrorInfo error_info = 1;

  // retry_info is the retry info.
  google.rpc.RetryInfo retry_info = 2;

  // debug_info is the debug info.
  google.rpc.DebugInfo debug_info = 3;

  // quota_failure is the quota failure.
  google.rpc.QuotaFailure quota_failure = 4;

  // precondition_failure is the precondition failure.
  google.rpc.PreconditionFailure precondition_failure = 5;

  // bad_request is the bad request.
  google.rpc.BadRequest bad_request = 6;

  // request_info is the request info.
  google.rpc.RequestInfo request_info = 7;

  // resource_info is the resource info.
  google.rpc.ResourceInfo resource_info = 8;

  // help is the help.
  google.rpc.Help help = 9;

  // localized_message is the localized message.
  google.rpc.LocalizedMessage localized_message = 10;
}

message Cause {
  oneof cause{
    google.protobuf.StringValue message = 1;
    google.protobuf.Any error = 2;
  }
}